# BrainBacker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_run.sh  main.cpp  utils.cmake  webgpu-utils.cpp  webgpu-utils.h
Assets/: pyramid.txt  shader.wgsl
Include/: ResourceManager.h
Include/App/: application.h  window.h
Include/Core/: gpu_context.h
Include/Renderer/: renderer.h
Include/Resources/: resource_manager.h
Include/Utility/: utility.h
Resources/: shader.vert
Source/: ResourceManager.cpp  application.cpp  gpu_context.cpp  main.cpp  window.cpp
resources/: shader.hlsl  shader.wgsl
src/: main.cpp
